# Heis-O-Mat

./: .env.example  .gitignore  GEMINI.md  README.md  compose.yaml  heis-o-mat.py  heise-download.py  pyproject.toml  start-downloads.sh
.github/workflows/: docker-build.yml  pypi-publish.yml
docker/: .env.example  compose.yaml  dockerfile  entrypoint.sh
